# twist2_mjlab

./: .gitignore  README.md  play_twist2.sh  play_twist2_pretrained.sh  pyproject.toml  sim2sim_pretrained.sh  train_twist2.sh
deploy/: export_onnx.py  play_sim_twist2.sh
deploy/common/: __init__.py  udp_sync.py
deploy/policy/: twist2_policy.py
deploy/sim/: sim_node.py
imgs/: readme_zh.md
resources/: eyes_japan_greeting_01_hello_aita.pkl  pretrained.onnx  readme_zh.md
src/twist2_mjlab/: __init__.py  commands.py  config.py  observations.py  pkl_motion_lib.py  rewards.py  rl_cfg.py  terminations.py
src/twist2_mjlab/rl/: __init__.py  encoders.py  models.py  runner.py
src/twist2_mjlab/scripts/: __init__.py  enrich_pkl.py
